[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/app/rendering/BodyRenderer.gd" id="1"]

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radial_segments = 48
rings = 24

[sub_resource type="SphereMesh" id="SphereMesh_2"]
radial_segments = 32
rings = 16

[node name="BodyRenderer" type="Node3D"]
script = ExtResource("1")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_1")
visible = false

[node name="AtmosphereMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_2")
visible = false

[node name="StarLight" type="OmniLight3D" parent="."]
visible = false
light_color = Color(1, 1, 0.9, 1)
light_energy = 2.0
omni_range = 50.0
omni_attenuation = 0.5
shadow_enabled = false

[node name="RingSystem" type="Node3D" parent="."]
